feat: Show places results in search popup
Now there will be three sections in search results:
- News
- Events
- Places

Resolves: #7751

--- a/src/app/shared/search-item/search-item.component.html
+++ b/src/app/shared/search-item/search-item.component.html
@@ -1,12 +1,10 @@
 <div class="search_item-wrp">
-  <div class="search_item-tag" *ngFor="let tag of searchModel.tags">
-    {{ tag }}
+  <div class="search_item-tag" *ngFor="let item of commonModel.tagsOrCategory">
+    {{ item }}
   </div>
   <div class="search_item-title">
-    <a [routerLink]="['/' + type, searchModel.id]">
-      <p>
-        {{ searchModel.title | slice: 0 : 130 }}
-      </p>
+    <a [routerLink]="itemLink">
+      <p>{{ commonModel.title | slice: 0 : 130 }}</p>
     </a>
   </div>
 </div>
