unable/enable editing address field without updating page

--- a/src/app/ubs/ubs-admin/components/ubs-admin-address-details/ubs-admin-address-details.component.html
+++ b/src/app/ubs/ubs-admin/components/ubs-admin-address-details/ubs-admin-address-details.component.html
@@ -10,6 +10,7 @@
     [address]="address"
     [edit]="true"
     [isFromAdminPage]="true"
+    [isOrderStatusCancelOrDone]="isOrderStatusCancelOrDone$ | async"
   ></app-address-input>
   <hr />
 </div>
