add brought_it_himself to uneditable statuses

--- a/src/app/ubs/ubs-admin/components/ubs-admin-address-details/ubs-admin-address-details.component.html
+++ b/src/app/ubs/ubs-admin/components/ubs-admin-address-details/ubs-admin-address-details.component.html
@@ -10,7 +10,7 @@
     [address]="address"
     [edit]="true"
     [isFromAdminPage]="true"
-    [isOrderStatusCancelOrDone]="isOrderStatusCancelOrDone$ | async"
+    [uneditableStatus]="isEditableStatus$ | async"
   ></app-address-input>
   <hr />
 </div>
