--- a/src/app/ubs/ubs-admin/components/ubs-admin-table/ubs-admin-table.component.html
+++ b/src/app/ubs/ubs-admin/components/ubs-admin-table/ubs-admin-table.component.html
@@ -319,7 +319,7 @@
           [nameOfColumn]="column.title.key"
           [ordersToChange]="idsToChange"
           [isAllChecked]="allChecked"
-          [doneOrCanceled]="checkStatusOfOrders(row.id)"
+          [uneditableStatus]="checkStatusOfOrders(row.id)"
           [dataForPopUp]="dataForPopUp"
           [showPopUp]="showPopUp"
           (editCellSelect)="editCell($event)"
@@ -337,7 +337,7 @@
           [id]="row.id"
           [ordersToChange]="idsToChange"
           [isAllChecked]="allChecked"
-          [doneOrCanceled]="checkStatusOfOrders(row.id)"
+          [uneditableStatus]="checkStatusOfOrders(row.id)"
           (editDateCell)="editCell($event)"
           (showBlockedInfo)="showBlockedMessage($event)"
         >
@@ -350,7 +350,7 @@
           [id]="row.id"
           [ordersToChange]="idsToChange"
           [isAllChecked]="allChecked"
-          [doneOrCanceled]="checkStatusOfOrders(row.id)"
+          [uneditableStatus]="checkStatusOfOrders(row.id)"
           (cancelEdit)="cancelEditCell($event)"
           (editTimeCell)="editCell($event)"
           (showBlockedInfo)="showBlockedMessage($event)"
