--- a/src/app/ubs/ubs-admin/components/ubs-admin-export-details/ubs-admin-export-details.component.html
+++ b/src/app/ubs/ubs-admin/components/ubs-admin-export-details/ubs-admin-export-details.component.html
@@ -2,17 +2,17 @@
   <div class="form" [formGroup]="exportDetailsDto">
     <div class="empty_card" (click)="openDetails()">
       <img
-        *ngIf="!pageOpen && (exportDetailsDto.valid || isOrderStatusCancelOrDone)"
+        *ngIf="!pageOpen && (exportDetailsDto.valid || uneditableStatus)"
         src="assets/img/ubs-admin-orders/arrow_up.svg"
         alt="arrow up"
       />
       <img
-        *ngIf="pageOpen && (exportDetailsDto.valid || isOrderStatusCancelOrDone)"
+        *ngIf="pageOpen && (exportDetailsDto.valid || uneditableStatus)"
         src="assets/img/ubs-admin-orders/arrow_down.svg"
         alt="arrow down"
       />
       <img
-        *ngIf="pageOpen && !exportDetailsDto.valid && !isOrderStatusCancelOrDone"
+        *ngIf="pageOpen && !exportDetailsDto.valid && !uneditableStatus"
         src="assets/img/ubs-admin-orders/red_arrow_down.svg"
         alt="arrow down"
       />
