--- a/src/app/main/component/user/components/profile/users-friends/friend-dashboard/friend-profile-page/friend-profile-dashboard/friend-profile-dashboard.component.scss
+++ b/src/app/main/component/user/components/profile/users-friends/friend-dashboard/friend-profile-page/friend-profile-dashboard/friend-profile-dashboard.component.scss
@@ -1,3 +1,5 @@
+@import 'src/typography/_resp.scss';
+
 .dashboard {
   font-family: var(--primary-font);
   margin-bottom: 30px;
@@ -80,13 +82,13 @@
   max-width: 100%;
 }
 
-@media (min-width: 768px) {
+@include responsiveMobileFirst(md) {
   .friends-item {
     width: 469px;
   }
 }
 
-@media (min-width: 1200px) {
+@include responsiveMobileFirst(xl) {
   .dashboard-container {
     max-width: 900px;
     overflow-x: auto;
@@ -98,14 +100,14 @@
   }
 }
 
-@media (min-width: 1440px) {
+@include responsiveMobileFirst(3xl) {
   .dashboard-container {
     max-width: 1220px;
     overflow-x: auto;
   }
 }
 
-@media (max-width: 576px) {
+@include responsivePCFirst(md) {
   .dashboard-container {
     padding: 0;
   }
@@ -117,19 +119,19 @@
   grid-gap: 30px;
   justify-content: center;
 
-  @media (min-width: 576px) {
+  @include responsiveMobileFirst(md) {
     grid-template-columns: repeat(1, minmax(200px, 380px));
   }
 
-  @media (min-width: 992px) {
+  @include responsiveMobileFirst(lg) {
     grid-template-columns: repeat(2, minmax(250px, 350px));
   }
 
-  @media (min-width: 1200px) {
+  @include responsiveMobileFirst(2xl) {
     grid-template-columns: repeat(2, 350px);
   }
 
-  @media (min-width: 1440px) {
+  @include responsiveMobileFirst(3xl) {
     grid-template-columns: repeat(3, 350px);
   }
 }
