provide optional fields to change status to adjustment form

--- a/src/app/ubs/ubs-admin/components/ubs-admin-several-orders-pop-up/ubs-admin-several-orders-pop-up.component.html
+++ b/src/app/ubs/ubs-admin/components/ubs-admin-several-orders-pop-up/ubs-admin-several-orders-pop-up.component.html
@@ -52,7 +52,12 @@
       <div class="form" formGroupName="responsiblePersonsForm">
         <div class="form-row" *ngFor="let person of responsiblePersonsData">
           <div class="form-group">
-            <label class="form__label">{{ person.translate | translate }}</label>
+            <label class="form__label">
+              {{ person.translate | translate }}
+              <span class="form__label" *ngIf="isFieldOptional(person.formControlName)"
+                >({{ 'order-edit.optional-field' | translate }})</span
+              >
+            </label>
             <select formControlName="{{ person.formControlName }}" class="form-control form__select">
               <option *ngFor="let employee of person.responsiblePersonsArray" [value]="employee">
                 {{ employee }}
