--- a/src/app/main/component/shared/components/drag-and-drop/drag-and-drop.component.html
+++ b/src/app/main/component/shared/components/drag-and-drop/drag-and-drop.component.html
@@ -1,4 +1,4 @@
-<p class="warning" [ngClass]="{ 'warning-color': isWarning }">{{ 'drag-and-drop.picture-tooltip' | translate }}</p>
+<p class="warning" *ngIf="showTopMessage" [ngClass]="{ 'warning-color': isWarning }">{{ 'drag-and-drop.picture-tooltip' | translate }}</p>
 <div *ngIf="!file && !isWarning" class="dropzone" appDragAndDrop (files)="filesDropped($event)">
   <div class="text-wrapper">
     <div class="centered">
@@ -37,11 +37,12 @@
     </button>
   </div>
 </div>
+
 <ng-template #elseBlock>
   <div class="dropzone warning-background" appDragAndDrop (files)="filesDropped($event)">
     <div class="text-wrapper">
       <div class="centered">
-        <p>{{ 'drag-and-drop.not-uploaded-warning' | translate }}</p>
+        <p class="warning-regular">{{ 'drag-and-drop.not-uploaded-warning' | translate }}</p>
         <p>
           {{ 'drag-and-drop.picture-description' | translate }}
           <label for="upload">
