--- a/src/app/main/component/shared/components/drag-and-drop/drag-and-drop.component.scss
+++ b/src/app/main/component/shared/components/drag-and-drop/drag-and-drop.component.scss
@@ -13,6 +13,7 @@
   width: 100%;
   height: 231px;
   display: flex;
+
   justify-content: center;
   align-items: center;
 
@@ -31,7 +32,12 @@
   font-size: 18px;
   text-align: center;
   width: 250px;
-  font-family: var(--primary-font);
+  font-family: var(---tertiary-font);
+  font-weight: 700;
+
+  .warning-regular {
+    font-weight: normal !important;
+  }
 
   span {
     color: var(--primary-green);
@@ -45,11 +51,12 @@
 }
 
 .warning-background {
+  border-color: var(--error-red);
   background-color: #fef1f2;
 }
 
 .warning {
-  font-family: var(--primary-font);
+  font-family: var(--tertiary-font);
   color: var(--freinacht-black);
   font-size: 12px;
   line-height: 16px;
