--- a/src/app/main/component/shared/components/edit-photo-pop-up/edit-photo-pop-up.component.scss
+++ b/src/app/main/component/shared/components/edit-photo-pop-up/edit-photo-pop-up.component.scss
@@ -2,8 +2,8 @@
 
 .main-container {
   position: relative;
-  width: 600px;
-  height: 550px;
+  width: 615px;
+  padding: 72px 0 30px;
   font-family: var(--tertiary-font);
   display: flex;
   justify-content: center;
@@ -30,7 +30,6 @@
 
     .selected-photo {
       max-height: 148px;
-      max-width: 148px;
       box-sizing: content-box;
     }
 
@@ -44,21 +43,32 @@
       text-align: center;
     }
 
-    .warning {
+    .message {
       font-family: var(--primary-font);
       font-size: 14px;
-      color: var(--error-ligh-red);
-      line-height: 0.8rem;
       padding: 0;
+      margin: 0;
+      margin-top: -30px;
+      z-index: 10;
+      color: var(--quaternary-grey);
+      width: 100%;
+      text-align: start;
+    }
+
+    .warning {
+      color: var(--error-ligh-red);
+      margin-top: 0;
     }
 
     .cropper-block {
       min-height: 148px;
+      width: 100%;
     }
 
     .buttons {
       display: flex;
       align-items: center;
+      justify-content: center;
 
       button {
         font-family: var(--tertiary-font);
@@ -95,7 +105,7 @@
   }
 
   .text-wrapper {
-    width: 456px;
+    width: 90%;
     height: 231px;
     display: flex;
     justify-content: center;
@@ -115,7 +125,6 @@
     font-size: 16px;
     text-align: center;
     line-height: 24px;
-    width: 250px;
     font-weight: 700;
     font-family: var(--tertiary-font);
 
@@ -135,6 +144,7 @@
 
 .dropzone-error {
   & .dropzone {
+    border-color: var(--error-red);
     background-color: var(--error-light-red);
     background-image: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' stroke='%23EB180DFF' stroke-width='1' stroke-dasharray='10' stroke-dashoffset='0' stroke-linecap='square'/%3e%3c/svg%3e");
   }
@@ -147,7 +157,6 @@
 @include responsiveRange(sm, md) {
   .main-container {
     width: 518px;
-    height: 476px;
   }
 }
 
@@ -155,6 +164,7 @@
   .main-container {
     width: 90vw;
     height: 90vh;
+    padding: 0 14px;
     overflow: auto;
 
     .wrapper {
@@ -186,7 +196,7 @@
     }
 
     .text-wrapper {
-      width: 227px;
+      width: 90%;
       height: 259px;
     }
   }
