--- a/src/app/main/component/user/components/shared/components/user-profile-image/user-profile-image.component.html
+++ b/src/app/main/component/user/components/shared/components/user-profile-image/user-profile-image.component.html
@@ -1,6 +1,6 @@
 <div class="profile-avatar-wrapper">
   <img
-    *ngIf="sanitizedImgPath"
+    *ngIf="sanitizedImgPath && imgPath"
     class="profile-avatar"
     referrerpolicy="no-referrer"
     alt="avatar"
