--- a/src/app/main/component/shared/components/drag-and-drop/drag-and-drop.component.html
+++ b/src/app/main/component/shared/components/drag-and-drop/drag-and-drop.component.html
@@ -42,7 +42,7 @@
   <div class="dropzone warning-background" appDragAndDrop (files)="filesDropped($event)">
     <div class="text-wrapper">
       <div class="centered">
-        <p class="warning-regular">{{ 'drag-and-drop.not-uploaded-warning' | translate }}</p>
+        <p>{{ 'drag-and-drop.not-uploaded-warning' | translate }}</p>
         <p>
           {{ 'drag-and-drop.picture-description' | translate }}
           <label for="upload">
