--- a/src/app/main/component/shared/components/drag-and-drop/drag-and-drop.component.scss
+++ b/src/app/main/component/shared/components/drag-and-drop/drag-and-drop.component.scss
@@ -32,12 +32,7 @@
   font-size: 18px;
   text-align: center;
   width: 250px;
-  font-family: var(---tertiary-font);
-  font-weight: 700;
-
-  .warning-regular {
-    font-weight: normal !important;
-  }
+  font-family: var(--primary-font);
 
   span {
     color: var(--primary-green);
@@ -56,7 +51,7 @@
 }
 
 .warning {
-  font-family: var(--tertiary-font);
+  font-family: var(--primary-font);
   color: var(--freinacht-black);
   font-size: 12px;
   line-height: 16px;
