--- a/src/app/main/component/shared/components/edit-photo-pop-up/edit-photo-pop-up.component.scss
+++ b/src/app/main/component/shared/components/edit-photo-pop-up/edit-photo-pop-up.component.scss
@@ -2,12 +2,10 @@
 
 .main-container {
   position: relative;
-  width: 615px;
-  padding: 72px 0 30px;
+  max-width: 90vw;
+  padding: 72px 80px 30px;
   font-family: var(--tertiary-font);
-  display: flex;
-  justify-content: center;
-  align-items: center;
+
   background: var(--primary-white);
 
   .cancel {
@@ -20,6 +18,11 @@
     &:focus {
       box-shadow: 0 0 0 3px var(--primary-white);
     }
+  }
+
+  ::ng-deep .dropzone {
+    width: 99% !important;
+    margin: 1px;
   }
 
   .wrapper {
@@ -91,80 +94,18 @@
   }
 }
 
-.dropzone-wrapper {
-  display: flex;
-  flex-flow: column wrap;
-  align-items: center;
-
-  .dropzone {
-    height: 231px;
-    width: 100%;
-    display: table;
-    background-image: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' stroke='%23333' stroke-width='1' stroke-dasharray='10' stroke-dashoffset='0' stroke-linecap='square'/%3e%3c/svg%3e");
-    margin-bottom: 8px;
-  }
-
-  .text-wrapper {
-    width: 90%;
-    height: 231px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    input[type='file'] {
-      position: absolute;
-      overflow: hidden;
-      z-index: -1;
-      width: 0.1px;
-      height: 0.1px;
-      opacity: 0;
-    }
-  }
-
-  .centered {
-    font-size: 16px;
-    text-align: center;
-    line-height: 24px;
-    font-weight: 700;
-    font-family: var(--tertiary-font);
-
-    label > [browse] {
-      color: var(--primary-green);
-      text-decoration: underline;
-      cursor: pointer;
-    }
-  }
-
-  .download-info {
-    line-height: 24px;
-    color: var(--quaternary-grey);
-    font-size: 12px;
-  }
-}
-
-.dropzone-error {
-  & .dropzone {
-    border-color: var(--error-red);
-    background-color: var(--error-light-red);
-    background-image: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' stroke='%23EB180DFF' stroke-width='1' stroke-dasharray='10' stroke-dashoffset='0' stroke-linecap='square'/%3e%3c/svg%3e");
-  }
-
-  & .download-info {
-    color: var(--error-red);
-  }
-}
-
 @include responsiveRange(sm, md) {
   .main-container {
-    width: 518px;
+    min-width: 518px;
+    padding: 72px 60px 30px;
   }
 }
 
 @include responsivePCFirst(sm) {
   .main-container {
     width: 90vw;
-    height: 90vh;
-    padding: 0 14px;
+    height: 100%;
+    padding: 72px 40px 30px;
     overflow: auto;
 
     .wrapper {
@@ -183,21 +124,6 @@
           width: 288px;
         }
       }
-    }
-
-    .dropzone {
-      margin-bottom: 16px;
-      width: 227px;
-    }
-
-    .download-info {
-      width: 232px;
-      text-align: left;
-    }
-
-    .text-wrapper {
-      width: 90%;
-      height: 259px;
     }
   }
 }
