add concrete message to popup

--- a/src/app/ubs/ubs-admin/components/ubs-admin-confirm-status-change-pop-up/ubs-admin-confirm-status-change-pop-up.component.html
+++ b/src/app/ubs/ubs-admin/components/ubs-admin-confirm-status-change-pop-up/ubs-admin-confirm-status-change-pop-up.component.html
@@ -5,7 +5,7 @@
     </button>
   </div>
   <div class="content-container">
-    <h4>{{ 'order-status-confirm.confirm-message' | translate }}</h4>
+    <h4>{{ 'order-status-confirm.confirm-message' | translate }} {{ data.newOption }}?</h4>
   </div>
   <div>
     <div class="btn-container">
