--- a/src/app/ubs/ubs-admin/components/ubs-admin-employee/ubs-admin-employee-edit-form/ubs-admin-employee-edit-form.component.scss
+++ b/src/app/ubs/ubs-admin/components/ubs-admin-employee/ubs-admin-employee-edit-form/ubs-admin-employee-edit-form.component.scss
@@ -113,14 +113,13 @@ form {
 
 .accordion-role-body {
   display: flex;
-  flex-flow: column wrap;
+  flex-wrap: wrap;
   width: 100%;
-  max-height: 140px;
 }
 
 .role-item {
-  display: block;
   width: 50%;
+  box-sizing: border-box;
 }
 
 .checkbox-location,
@@ -296,13 +295,17 @@ label {
   gap: 18px;
 
   .filter-wrapper {
+    position: relative;
     height: 36px;
     width: 230px;
     border: 1px solid var(--ubs-primary-light-grey);
     border-radius: 4px;
+    display: flex;
+    align-items: center;
 
     input {
       padding-left: 15px;
+      padding-right: 30px;
       margin: 0;
       width: 100%;
       height: 100%;
@@ -314,10 +317,8 @@ label {
 
   .icon-style {
     position: absolute;
-    right: 320px;
-    bottom: 448px;
+    right: 10px;
     color: var(--ubs-primary-light-grey);
-    margin: 8px;
   }
 }
 
