--- a/src/app/main/component/user/components/profile/user-notifications/user-notifications.component.html
+++ b/src/app/main/component/user/components/profile/user-notifications/user-notifications.component.html
@@ -109,11 +109,16 @@
           (click)="navigate($event)"
           (keydown)="navigate($event)"
         ></p>
-        <div class="friend-action-button" *ngIf="notification.notificationType === notificationFriendRequest">
-          <button (click)="declineRequest(notification.actionUserId[0])" class="decline-request">
+        <div
+          class="friend-action-button"
+          *ngIf="
+            notification.notificationType === notificationFriendRequest || notification.notificationType === notificationHabitInvitation
+          "
+        >
+          <button (click)="declineRequest(notification)" class="decline-request">
             <span class="material-icons">close</span><span>{{ 'profile.friends.request-decline' | translate }}</span>
           </button>
-          <button (click)="acceptRequest(notification.actionUserId[0])" class="accept-request">
+          <button (click)="acceptRequest(notification)" class="accept-request">
             <span class="material-icons">done</span><span>{{ 'profile.friends.request-accept' | translate }}</span>
           </button>
         </div>
