--- a/src/app/main/component/user/components/habit/add-new-habit/add-new-habit.component.html
+++ b/src/app/main/component/user/components/habit/add-new-habit/add-new-habit.component.html
@@ -68,7 +68,11 @@
           </div>
         </div>
         <div class="invite-friends">
-          <app-habit-invite-friends class="invite-friends-container" [habitId]="habitId"></app-habit-invite-friends>
+          <app-habit-invite-friends
+            class="invite-friends-container"
+            [habitId]="habitId"
+            [habitAssignId]="habitAssignId"
+          ></app-habit-invite-friends>
         </div>
       </div>
     </div>
