--- a/src/app/main/component/events/components/update-event/update-event.component.html
+++ b/src/app/main/component/events/components/update-event/update-event.component.html
@@ -1,3 +1,3 @@
 <app-spinner *ngIf="isFetching"></app-spinner>
-<app-event-editor *ngIf="!isFetching && isAuthor" [eventId]="eventId" [formInput]="eventForm" [isUpdating]="true"></app-event-editor>
+<app-event-editor *ngIf="!isFetching && isAuthor" [eventId]="eventId"></app-event-editor>
 <h2 *ngIf="!isAuthor && isFetching">Event not found</h2>
