--- a/src/app/ubs/ubs-admin/components/ubs-admin-table/table-cell-date/table-cell-date.component.html
+++ b/src/app/ubs/ubs-admin/components/ubs-admin-table/table-cell-date/table-cell-date.component.html
@@ -6,7 +6,7 @@
   <mat-spinner *ngIf="isBlocked" strokeWidth="3" diameter="20"></mat-spinner>
 </div>
 
-<mat-form-field *ngIf="isEditable && !uneditableStatus" color="accent" appearance="fill">
+<mat-form-field *ngIf="isEditable && !uneditableStatus" appearance="fill">
   <input matInput [matDatepicker]="picker1" [min]="current" [value]="date" (dateChange)="changeData($event)" id="date-input" />
   <mat-datepicker-toggle matSuffix [for]="picker1" color="accent"></mat-datepicker-toggle>
   <mat-datepicker #picker1></mat-datepicker>
