--- a/src/app/main/component/user/components/habit/habit-invitations/habit-invitations.component.scss
+++ b/src/app/main/component/user/components/habit/habit-invitations/habit-invitations.component.scss
@@ -5,7 +5,8 @@
   flex-flow: row wrap;
   justify-content: center;
 
-  padding: 40px;
+  padding-top: 28px;
+  padding-bottom: 44px;
 
   @include responsiveMobileFirst(sm) {
     flex-direction: column;
@@ -13,6 +14,37 @@
 
   .requests-box {
     width: 100%;
+  }
+
+  .header {
+    padding: 12px 0 44px;
+
+    h1 {
+      font-style: normal;
+      font-weight: 500;
+      font-size: 48px;
+      line-height: 48px;
+      font-family: var(--tertiary-font);
+    }
+  }
+
+  .button-link {
+    line-height: 16px;
+    margin: 0;
+    color: var(--primary-dark-grey);
+
+    .button-content {
+      display: flex;
+
+      .button-arrow {
+        margin-right: 6px;
+      }
+    }
+  }
+
+  .active {
+    color: var(--primary-green);
+    text-decoration: none;
   }
 
   .cards-box {
