--- a/src/app/ubs/ubs-admin/components/ubs-admin-tariffs/ubs-admin-tariffs-card-pop-up/ubs-admin-tariffs-card-pop-up.component.scss
+++ b/src/app/ubs/ubs-admin/components/ubs-admin-tariffs/ubs-admin-tariffs-card-pop-up/ubs-admin-tariffs-card-pop-up.component.scss
@@ -1,4 +1,12 @@
 @import '../ubs-admin-tariffs-location-pop-up/ubs-admin-tariffs-location-pop-up.component';
+::ng-deep {
+  #region-name,
+  #courierName {
+    .mat-mdc-select-arrow {
+      display: none;
+    }
+  }
+}
 
 .english-part {
   width: 248px;
