--- a/src/app/shared/ubs-footer/ubs-footer.component.scss
+++ b/src/app/shared/ubs-footer/ubs-footer.component.scss
@@ -1,6 +1,7 @@
 .footer {
   width: 100%;
   padding: 12px 0;
+  margin-left: 40px;
   display: flex;
   background-color: var(--ubs-secondary-dark-green);
   font-family: var(--ubs-secondary-font);
