fix: some texts and footer

--- a/src/app/ubs/ubs/components/ubs-order-details/extra-packages-pop-up/extra-packages-pop-up.component.html
+++ b/src/app/ubs/ubs/components/ubs-order-details/extra-packages-pop-up/extra-packages-pop-up.component.html
@@ -58,8 +58,7 @@
       <div class="subtitle">
         <p class="subtitle">
           <strong>
-            {{ 'extra-packages-pop-up.subtitle-first' | translate }} {{ 'extra-packages-pop-up.unlimited' | translate }}
-            {{ 'extra-packages-pop-up.subtitle-second' | translate }}
+            {{ 'extra-packages-pop-up.extrapositions-conditions' | translate }}
           </strong>
         </p>
       </div>
