--- a/src/app/ubs/ubs/components/ubs-order-details/ubs-order-details.component.html
+++ b/src/app/ubs/ubs/components/ubs-order-details/ubs-order-details.component.html
@@ -14,9 +14,10 @@
         </div>
       </div>
       <div class="validMes">
-        <small class="text-danger" *ngIf="orderDetailsForm?.controls.bags.errors as errors">{{
-          errors.message | translate: { value: errors.value }
-        }}</small>
+        <small class="text-danger" *ngIf="orderDetailsForm?.controls.bags.errors as errors">
+          <b>{{ 'order-details.attention' | translate }}</b>
+          {{ errors.message | translate: { value: errors.value } }}
+        </small>
       </div>
     </div>
 
