provide default time values

--- a/src/app/ubs/ubs-admin/components/ubs-admin-several-orders-pop-up/ubs-admin-several-orders-pop-up.component.html
+++ b/src/app/ubs/ubs-admin/components/ubs-admin-several-orders-pop-up/ubs-admin-several-orders-pop-up.component.html
@@ -78,5 +78,12 @@
       </div>
     </div>
   </form>
-  <app-time-picker *ngIf="showTimePicker" (timeOfExport)="setExportTime($event)" [exportDate]="getExportDate()"> </app-time-picker>
+  <app-time-picker
+    *ngIf="showTimePicker"
+    (timeOfExport)="setExportTime($event)"
+    [exportDate]="getExportDate()"
+    [setTimeFrom]="fromInput"
+    [setTimeTo]="toInput"
+  >
+  </app-time-picker>
 </div>
