set default working hours

--- a/src/app/ubs/ubs-admin/components/ubs-admin-several-orders-pop-up/ubs-admin-several-orders-pop-up.component.html
+++ b/src/app/ubs/ubs-admin/components/ubs-admin-several-orders-pop-up/ubs-admin-several-orders-pop-up.component.html
@@ -81,5 +81,12 @@
   <ng-template #spinner>
     <app-spinner></app-spinner>
   </ng-template>
-  <app-time-picker *ngIf="showTimePicker" (timeOfExport)="setExportTime($event)" [exportDate]="getExportDate()"> </app-time-picker>
+  <app-time-picker
+    *ngIf="showTimePicker"
+    (timeOfExport)="setExportTime($event)"
+    [exportDate]="getExportDate()"
+    [setTimeFrom]="fromInput"
+    [setTimeTo]="toInput"
+  >
+  </app-time-picker>
 </div>
